--- a/src/templates/countries-list.hbs
+++ b/src/templates/countries-list.hbs
@@ -1,5 +1,5 @@
 <ul class="coontries-list">
   {{#each this}}
-  <li class="countries-list-item">{{}}</li>
+  <li class="countries-list-item">{{name}}</li>
   {{/each}}
 </ul>
