--- a/src/styles.css
+++ b/src/styles.css
@@ -19,27 +19,99 @@ body {
   background-image: url('./images/bg-pattern.png');
 }
 
+.list {
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .container {
-  display: flex;
-  justify-content: center;
   width: 1000px;
   margin: 0 auto;
   padding: 10px;
 }
 
-.search-form {
+.search-box {
   width: 300px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   text-align: center;
 }
 
-.serch-form-label {
+.serch-box-name {
   font-size: 20px;
   font-weight: 700;
+  margin-top: 0;
   margin-bottom: 5px;
 }
 
-.serch-form-input {
+.serch-box-input {
   padding: 5px;
+}
+
+.countries-box {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+
+  /* background-color: lightgray; */
+}
+
+.country-card-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.country-properties-list {
+  width: 500px;
+}
+.country-properties-sublist {
+  list-style-type: disc;
+  margin-top: 15px;
+}
+
+.coutry-property {
+  font-size: 20px;
+}
+
+.coutry-property-name {
+  font-weight: 700;
+}
+
+.coutry-property:not(:last-child) {
+  margin-bottom: 15px;
+}
+.country-properties-sublist-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.country-name {
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
+.country-card-image {
+  max-width: 500px;
+}
+
+.coontries-list {
+  margin: 0 auto;
+}
+
+.countries-list-item {
+  font-size: 20px;
+  font-weight: 700;
 }
